test: added tests in `OrphanageServicesTest` class